add uniwue constraint to (score_sheet_id, name) to ensure score unique tabulation while export
