# backend/gapi/rpc_create_delegate.go
@@ -7,6 +7,7 @@ import (
 	db "github.com/DebdipWritesCode/MUN_Scoresheet/backend/db/sqlc"
 	"github.com/DebdipWritesCode/MUN_Scoresheet/backend/pb"
 	"github.com/DebdipWritesCode/MUN_Scoresheet/backend/val"
+	"github.com/lib/pq"
 	"google.golang.org/genproto/googleapis/rpc/errdetails"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
@@ -33,6 +34,9 @@ func (server *Server) CreateDelegate(ctx context.Context, req *pb.CreateDelegate
 
 	delegate, err := server.store.CreateDelegate(ctx, arg)
 	if err != nil {
+		if pqErr, ok := err.(*pq.Error); ok && pqErr.Code.Name() == "unique_violation" {
+			return nil, status.Errorf(codes.AlreadyExists, "delegate with name %s already exists for score sheet ID %d", req.GetName(), req.GetScoreSheetId())
+		}
 		return nil, status.Errorf(codes.Internal, "failed to create delegate: %v", err)
 	}
 
